Fix memory usage, preprocessor, tables rendering, csv tables editor

--- a/ru.dip.editors/src/ru/dip/editors/messages.properties
+++ b/ru.dip.editors/src/ru/dip/editors/messages.properties
@@ -35,6 +35,8 @@ DipView_ID=ru.dip.editors.umlview
 DipView_ViewSizeActionName=View size
 DipView_ZoomMinusActionName=Zoom -
 DipView_ZoomPlusActionName=Zoom +
+DotEditor_ID=ru.dip.editors.doteditor
+DotEditorContributor_OpenDipViewActionName=Open DIP Render
 EditViewPart_ID=ru.dip.editors.editview
 EditViewPart_Name=DIP Edit
 EditViewPart_QuestionSave=\ was not saved. Save?
