Add new report view

--- a/ru.dip.editors/src/ru/dip/editors/messages.properties
+++ b/ru.dip.editors/src/ru/dip/editors/messages.properties
@@ -77,6 +77,7 @@ NumberListAction_ID=ru.dip.editors.md.list
 NumberListAction_Name=Numbered List
 ParagraphAction_ID=ru.dip.editors.md.paragraph
 ParagraphAction_Name=Paragraph
+ReportEditor_ContentPageTitle=Content
 ReportEditor_ReportPageTitle=GUI
 ReportEditor_RulesPageTitle=Rules
 ReportPage_1=\ [?]
